# proyecto-sctr

./: .gitignore  CMakeLists.txt  Control LED y sensor ultrasónico  Ficha_tecnica.rtf  Ficha_tecnica.txt  LICENSE  README.md  codigo main  ficha tecnica  main.c
documentation/: Ficha_tecnica.txt  Roles  readme.txt
